fixes Render transforms, modifies how align works

--- a/src/less/elements.less
+++ b/src/less/elements.less
@@ -500,7 +500,10 @@
   &.no-split,
   &.first {
     height: auto !important;
-    margin-top: 20px;
+
+    > .content {
+      margin-top: 20px;
+    }
   }
   
   &.first {
